# code-factory-1-spec

./: README.md  pyproject.toml  setup.py
.github/workflows/: ci.yaml  publish-pypi.yml
examples/refund-portal/: README.md  walkthrough.sh
specline/: __init__.py  adapters.py  attribution.py  cli.py  drift_audit.py  gates.py  handoff.py  ledger.py  loop.py  packets.py  paths.py  plan_lint.py  prd_optimizer.py  provenance.py  scaffold.py  spec_lint.py  specfactor.py  strict_lint.py  validator_mutation.py
templates/: AGENTS.md  PLAN_TEMPLATE.md  SPEC_TEMPLATE.md
templates/context/: AI_WORKFLOW_RULES.md  ARCHITECTURE.md  CODE_STANDARDS.md  PROGRESS.md  PROJECT_OVERVIEW.md  UI_CONTEXT.md
templates/personas/: reviewer.md  security_auditor.md
tests/: conftest.py  test_specline.py  test_strict.py
