[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "code-factory-1-spec"
version = "0.3.1"
description = "SpecLine — a spec-driven production line for AI-assisted engineering: PRD -> spec -> plan -> atomic task packets -> gated code, with token-lean context hygiene and a compiled-decision handoff to Harness Software Factory (HSF)."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
specline = "specline.cli:main"

[tool.setuptools.packages.find]
include = ["specline*"]

[tool.setuptools.package-data]
specline = ["../templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
