[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "code-factory-1-spec"
version = "0.5.4"
description = "SpecLine — a spec-driven production line for AI-assisted engineering: PRD -> spec -> plan -> atomic task packets -> gated code, with token-lean context hygiene and a compiled-decision handoff to Harness Software Factory (HSF)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT OR Apache-2.0"
dependencies = ["PyYAML>=6.0"]

[project.urls]
Homepage = "https://github.com/zrk222/code-factory-1-spec"
Documentation = "https://github.com/zrk222/code-factory-1-spec#readme"
Issues = "https://github.com/zrk222/code-factory-1-spec/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
specline = "specline.cli:main"

[tool.setuptools.packages.find]
include = ["specline*"]

[tool.setuptools.package-data]
specline = ["../templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

